--- a/projects/ecg.html
+++ b/projects/ecg.html
@@ -550,7 +550,27 @@
 	});
 </script>
 <script type="text/javascript">
-	function clickNav() {
+	function FadeInSection(props) {
+  const [isVisible, setVisible] = React.useState(true);
+  const domRef = React.useRef();
+  React.useEffect(() => {
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => setVisible(entry.isIntersecting));
+    });
+    observer.observe(domRef.current);
+    return () => observer.unobserve(domRef.current);
+  }, []);
+  return (
+    <div
+      className={`fade-in-section ${isVisible ? 'is-visible' : ''}`}
+      ref={domRef}
+    >
+      {props.children}
+    </div>
+  );
+}
+
+    function clickNav() {
 		var x = document.getElementById("myTopnav");
 		var logo = document.getElementById("logo");
 		if (x.className === "topnav") {
