--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
 		<div class="category">
 			<div class="category_title">Featured Projects</div>
 		</div>
-	<div class="container_cards">
+	<div class="container_cards featured">
 		<a href="projects/metro.html" class="card_full">
 			<div class="container_sideBySide">
-				<div class="sideBySideItem width_33">
+				<div class="sideBySideItem width_50">
 					<img class="card_image_full" src="assets/metro-cover.jpg"/>
 				</div>
-				<div class="sideBySideItem width_66">
-					<div class="card_title">Ode to Metro</div>
-					<div class="card_description">Handmade stools inspired by the good and the bad of WMATA</div>
+				<div class="sideBySideItem width_50">
+					<div class="card_title">Featured project</div>
+					<div class="card_description">Pretend this section doesn't exist - I'm deciding what to put here!</div>
 				</div>
 			</div>
 		</a>
 		<a href="projects/metro.html" class="card_full">
 			<div class="container_sideBySide">
-				<div class="sideBySideItem width_33">
+				<div class="sideBySideItem width_50">
 					<img class="card_image_full" src="assets/metro-cover.jpg"/>
 				</div>
-				<div class="sideBySideItem width_66">
-					<div class="card_title">Ode to Metro</div>
-					<div class="card_description">Handmade stools inspired by the good and the bad of WMATA</div>
+				<div class="sideBySideItem width_50">
+					<div class="card_title">Recruiters, ignore this too!</div>
+					<div class="card_description">In progress! In progress!</div>
 					<div class="card_tag">Fiber Arts</div>
 				</div>
 			</div>
