--- a/projects/appian.html
+++ b/projects/appian.html
@@ -54,6 +54,35 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
+	</br>
+	<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50">
+					<img class="summary_image" src="../assets/appian-8.png"/>
+			</div>
+			<div class="sideBySideItem width_50">
+				<div class="card_title">Appian Designer Transformed</div></br>
+				<div class="content_text">
+					I led the year-long UX design process for a transformed Appian developer experience that focused on new user comprehension. The vision included an "Explore" page, a place for Appian users to gain a high-level overview of an application, where I oversaw the close collaboration between designers and engineers to build the delightful custom functionality that made this "Explore" page a success.
+				</br>
+				<a href="https://docs.appian.com/suite/help/22.2/Appian_Release_Notes.html#appian-designer-transformed" target="_blank" class="button_secondary">Read about the improved UX <i class="fas fa-external-link-square-alt"></i></a>
+				</div>
+				</div>
+		</div>
+	</br></br>	
+	</br>
+	<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50">
+					<img class="summary_image" src="../assets/icons.gif"/>
+			</div>
+			<div class="sideBySideItem width_50">
+				<div class="card_title">Icon Redesign</div></br>
+				<div class="content_text">
+				Following a corporate rebrand, I created new icons for the platform objects that followed our refreshed color palette and improved object recognition. The process involved cross-departmental communication to come up with a styling that both Design and Marketing liked</br>
+				<a href="https://docs.appian.com/suite/help/22.2/design-objects.html" target="_blank" class="button_secondary">See our new objects <i class="fas fa-external-link-square-alt"></i></a>
+				</div>
+				</div>
+		</div>
+	</br></br>	
     </br>
         <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
