--- a/illustration.html
+++ b/illustration.html
@@ -55,73 +55,103 @@
 				<img class="card_image" src="assets/appian-illustrations-cover.png"/>
 				<div class="card_title">Appian Product Illustrations</div>
 				<div class="card_description"> A product illustration initiative I started to introduce graphics to the platform with an emphasis on enhancing user experience and promoting inclusivity</div>
-				<div class="card_tag">Product Illustration</div>
+				<div class="card_tag_container">
+						<div class="card_tag illustrator">Illustrator</div>
+					</div>
 			</a>
 			<a href="projects/appian-illustrations-updated.html" class="card">
 				<img class="card_image" src="assets/appian-rebrand.png"/>
 				<div class="card_title">Appian Product Illustrations: Rebrand</div>
 				<div class="card_description"> A product illustration initiative I started to introduce graphics to the platform with an emphasis on enhancing user experience and promoting inclusivity</div>
-				<div class="card_tag">Product Illustration</div>
+				<div class="card_tag_container">
+						<div class="card_tag illustrator">Illustrator</div>
+					</div>
 			</a>
 			<a href="projects/dartmouthdays.html" class="card">
 				<img class="card_image" src="assets/dartmouth-cover.png"/>
 				<div class="card_title">The Dartmouth Days</div>
 				<div class="card_description">A series of illustrations that reflect on the four most formative years of my life</div>
-				<div class="card_tag">Series</div>
+				<div class="card_tag_container">
+						<div class="card_tag illustrator">Illustrator</div>
+					</div>
 			</a>
 			<a href="projects/viva.html" class="card">
 				<img class="card_image" src="assets/viva-basket.png"/>
 				<div class="card_title">Viva Raw</div>
 				<div class="card_description"> Packaging design and branding for a healthy, fresh raw pet food company</div>
-				<div class="card_tag">Branding</div>
+				<div class="card_tag_container">
+					<div class="card_tag illustrator">Illustrator</div>
+					<div class="card_tag branding">Branding</div>
+				</div>
 			</a>
 			<a href="projects/doodle2021.html" class="card">
 				<img class="card_image" src="assets/doodle-cover.png"/>
 				<div class="card_title">A Doodle a Week</div>
 				<div class="card_description"> A doodle a week for my 2021 New Year's Resolution to "get better at drawing", which turned into a sort of illustrated journal </div>
-				<div class="card_tag">Series</div>
+				<div class="card_tag_container">
+						<div class="card_tag photoshop">Adobe Fresco</div>
+					</div>
 			</a>
 			<a href="projects/doc-logos.html" class="card">
 				<img class="card_image" src="assets/doc-logos-cover.png"/>
 				<div class="card_title"> DOC Logos</div>
 				<div class="card_description"> Logo designs (and re-designs) for Dartmouth Outing Club's "sub-clubs" as well as the administrative Outdoor Programs Office</div>
-				<div class="card_tag">Branding</div>
+				<div class="card_tag_container">
+					<div class="card_tag branding">Branding</div>
+					<div class="card_tag illustrator">Illustrator</div>
+				</div>
 			</a>
 			<a href="projects/outing-guide.html" class="card">
 				<img class="card_image" src="assets/dog-cover.png"/>
 				<div class="card_title">Outing Guide Cover</div>
 				<div class="card_description"> A cover illustration for the updated Dartmouth Outing Guide</div>
-				<div class="card_tag">Illustration</div>
+				<div class="card_tag_container">
+						<div class="card_tag illustrator">Illustrator</div>
+					</div>
 			</a>
 			<a href="projects/woodsmokemag.html" class="card">
 				<img class="card_image" src="assets/woodsmoke.jpeg"/>
 				<div class="card_title">Woodsmoke</div>
 				<div class="card_description">A magazine I designed and published that celebrates the amazing explorations of folks in the DOC.</div>
-				<div class="card_tag">Branding</div>
+				<div class="card_tag_container">
+						<div class="card_tag branding">Branding</div>
+						<div class="card_tag indesign">InDesign</div>
+					</div>
 			</a>
 			<a href="projects/adventure-book.html" class="card">
 				<img class="card_image" src="assets/adventure-book-cover.png"/>
 				<div class="card_title"> Adventure Book</div>
 				<div class="card_description"> A handmade book showcasing some outdoors experiences during my time at Dartmouth</div>
-				<div class="card_tag">Bookbinding</div>
+				<div class="card_tag_container">
+						<div class="card_tag illustrator">Illustrator</div>
+						<div class="card_tag photoshop">Photoshop</div>
+					</div>
 			</a>
 			<a href="projects/cookies.html" class="card">
 				<img class="card_image" src="assets/cookiesforkc-cover2.png"/>
 				<div class="card_title">Cookies for KC</div>
 				<div class="card_description">Logos and illustrations for my sister's baking service that donated all proceeds to local business impacted by COVID-19</div>
-				<div class="card_tag">Branding</div>
+				<div class="card_tag_container">
+						<div class="card_tag branding">Branding</div>
+						<div class="card_tag illustrator">Illustrator</div>
+					</div>
 			</a>
 			<a href="projects/wintercarnival.html" class="card">
 				<img class="card_image" src="assets/snowwars-cover.png"/>
 				<div class="card_title">Winter Carnival poster</div>
 				<div class="card_description"> Winning Poster for Dartmouth's 2018 Winter Carnival "Snow Wars: May the Frost be with You"</div>
-				<div class="card_tag">Illustration</div>
+				<div class="card_tag_container">
+						<div class="card_tag illustrator">Illustrator</div>
+					</div>
 			</a>
 			<a href="projects/tsd.html" class="card">
-					<img class="card_image" src="assets/twinstatederby-cover.png"/>
-					<div class="card_title">Twin State Derby</div>
-					<div class="card_description">Logos and Merchandise for a womens roller derby league in the Upper Valley</div>
-					<div class="card_tag">Branding</div>
+				<img class="card_image" src="assets/twinstatederby-cover.png"/>
+				<div class="card_title">Twin State Derby</div>
+				<div class="card_description">Logos and Merchandise for a womens roller derby league in the Upper Valley</div>
+				<div class="card_tag_container">
+					<div class="card_tag illustrator">Illustrator</div>
+					<div class="card_tag branding">Branding</div>
+				</div>
 			</a>
 		</div>
 	</div>
