--- a/index.html
+++ b/index.html
@@ -68,10 +68,14 @@
 				<div class="sideBySideItem width_50">
 					<img class="card_image_full" src="assets/metro-cover.jpg"/>
 				</div>
-				<div class="sideBySideItem width_50">
+				<div class="sideBySideItem width_50 relative">
 					<div class="card_title">Recruiters, ignore this too!</div>
-					<div class="card_description">In progress! In progress!</div>
-					<div class="card_tag">Fiber Arts</div>
+					<div class="card_description">In progress! In progress!
+					</div>
+					<div class="card_tag_container_relative">
+							<div class="card_tag web">Wordpress</div>
+							<div class="card_tag ux">UX/UI</div>
+						</div>
 				</div>
 			</div>
 		</a>									
