--- a/projects/appian-illustrations-updated.html
+++ b/projects/appian-illustrations-updated.html
@@ -55,6 +55,10 @@
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
 			<div class="card_title">Sample Illustrations</div>
+			<img class="summary_image" src="../assets/underConstruction.png"/>
+		<div class="image_text">Page Under Construction</div>
+		<img class="summary_image" src="../assets/buildingInAppian.png"/>
+		<div class="image_text">Building in Appian</div>
 		<img class="summary_image" src="../assets/rebrand-00.png"/>
 		<div class="image_text">Records Welcome Screen</div>
 		<img class="summary_image" src="../assets/rebrand-0.png"/>
