--- a/projects/metro.html
+++ b/projects/metro.html
@@ -80,15 +80,19 @@
 		</div>
 		<div class="border"></div>
 		<div class="container_sideBySide"> 
-			<div class="sideBySideItem width_50">
-			</div>
-			<div class="sideBySideItem_isLast width_50 align_right">
-				<a href="springtime.html" class="navigation">
-					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+				<div class="sideBySideItem width_50">
+					<a href="projrunway.html" class="navigation">
+						<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+					</a>
+					<div class="content_text_no_margin">Sewing Projects</div>
+				</div>
+				<div class="sideBySideItem_isLast width_50 align_right">
+					<a href="springtime.html" class="navigation">
+						<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 					</a>
 					<div class="content_text_no_margin">Springtime</div>
+				</div>
 			</div>
-		</div>
 		
     </div>
 </div>
