--- a/physical.html
+++ b/physical.html
@@ -51,71 +51,115 @@
 				I call this entire process "tinkering" because I approach this as a casual and admittedly amateur form of experimentation, but I've thoroughly enjoyed the process of getting thoughts out of my head and turning my ideas into real, tangible things.
 				</div>
 			</div>
+			<a href="projects/climbingwall.html" class="card">
+				<img class="card_image" src="assets/climbingwall-cover.jpg"/>
+				<div class="card_title">Climbing Wall</div>
+				<div class="card_description">The hardest thing I've ever done and the proudest I've ever been! My personal free-standing woody</div>
+				<div class="card_tag_container">
+					<div class="card_tag painting">Painting</div>
+					<div class="card_tag wood">Wood</div>
+				</div>
+			</a>
+			<a href="projects/punchy.html" class="card">
+				<img class="card_image" src="assets/punch.png"/>
+				<div class="card_title">A Punch Needle Love Story</div>
+				<div class="card_description">A love story or an obsession? Check out all the random things I made under the guise of "gift for a friend"</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+					<div class="card_tag sewing">Sewing</div>
+				</div>
+			</a>
+			<a href="projects/projrunway.html" class="card">
+				<img class="card_image" src="assets/dresses.png"/>
+				<div class="card_title">My Project Runway Application</div>
+				<div class="card_description">Not actually an application to meet Tim Gunn, but a documentation of yet another craft experiment</div>
+				<div class="card_tag_container">
+					<div class="card_tag painting">Painting</div>
+					<div class="card_tag sewing">Sewing</div>
+				</div>
+			</a>
 			<a href="projects/metro.html" class="card">
 				<img class="card_image" src="assets/metro-cover.jpg"/>
 				<div class="card_title">Ode to Metro</div>
 				<div class="card_description">Handmade stools inspired by the good and the bad of WMATA</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+					<div class="card_tag wood">Wood</div>
+				</div>
 			</a>
 			<a href="projects/springtime.html" class="card">
 				<img class="card_image" src="assets/stool-1.png"/>
 				<div class="card_title">Springtime</div>
 				<div class="card_description">A handmade stool and cushion inspired by spring flowers</div>
-				<div class="card_tag">Fiber Arts</div>
-			</a>
-			<a href="projects/climbingwall.html" class="card">
-				<img class="card_image" src="assets/climbingwall-cover.jpg"/>
-				<div class="card_title">Climbing Wall</div>
-				<div class="card_description">The hardest thing I've ever done and the proudest I've ever been! My personal free-standing woody</div>
-				<div class="card_tag">Wood</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+					<div class="card_tag wood">Wood</div>
+				</div>
 			</a>
 			<a href="projects/pilot.html" class="card">
 				<img class="card_image" src="assets/pilot-cover.jpg"/>
 				<div class="card_title">Pilot</div>
 				<div class="card_description">The project that started it all. And by "it", I mean a newfound yarn obsession</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+				</div>
 			</a>
 			<a href="projects/colorfactory.html" class="card">
 				<img class="card_image" src="assets/colorfactory-cover.jpg"/>
 				<div class="card_title">Color Factory</div>
 				<div class="card_description"> An introduction to punch needling where, as expected, I dive right in with a large-scale project</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+				</div>
 			</a>
 			<a href="projects/flow.html" class="card">
 				<img class="card_image" src="assets/flow-cover.jpg"/>
 				<div class="card_title">Flow</div>
 				<div class="card_description">Weaving inspired by the flow of  water and sand mixing on the beach</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+				</div>
 			</a>
 			<a href="projects/geode.html" class="card">
 				<img class="card_image" src="assets/geode-cover.jpg"/>
 				<div class="card_title">Geode</div>
 				<div class="card_description">A weaving exploration in texture</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+				</div>
 			</a>
 			<a href="projects/wedge.html" class="card">
 				<img class="card_image" src="assets/wedge-cover.jpg"/>
 				<div class="card_title">Wedge</div>
 				<div class="card_description">A coffee table held together by its own parts (and no hardware!)</div>
-				<div class="card_tag">Wood</div>
+				<div class="card_tag_container">
+					<div class="card_tag wood">Wood</div>
+				</div>
 			</a>
 			<a href="projects/rosegarden.html" class="card">
 				<img class="card_image" src="assets/rosegarden-cover.jpg"/>
 				<div class="card_title">Rose Garden</div>
 				<div class="card_description">"Wake up and smell the roses", they say. As someone with the opposite of a green thumb, a headboard representing a rose garden is the closest I'll get</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+					<div class="card_tag wood">Wood</div>
+				</div>
 			</a>
 			<a href="projects/clouds.html" class="card">
 				<img class="card_image" src="assets/clouds-cover.jpg"/>
 				<div class="card_title">Clouds</div>
 				<div class="card_description">A whimsical weaving inspired by cotton-candy skies in San Diego</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag punchneedle">Punch Needle</div>
+				</div>
 			</a>
 			<a href="projects/candydots.html" class="card">
 				<img class="card_image" src="assets/candydots-cover.jpg"/>
 				<div class="card_title">Candy Dots</div>
 				<div class="card_description">A bobble blanket that took a long time, partly due to my slow speed but also due to craft stores running out of the colors I needed (which I guess is also my fault)</div>
-				<div class="card_tag">Fiber Arts</div>
+				<div class="card_tag_container">
+					<div class="card_tag">Crochet</div>
+				</div>
 			</a>									
 		</div>
 	</div>
