--- a/projects/climbingwall.html
+++ b/projects/climbingwall.html
@@ -239,20 +239,16 @@
 				</div>
 
 				<div class="border"></div>
-			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50">
-						<a href="springtime.html" class="navigation">
-							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
-						</a>
-						<div class="content_text_no_margin">Springtime</div>
+				<div class="container_sideBySide"> 
+						<div class="sideBySideItem width_50">
+						</div>
+						<div class="sideBySideItem_isLast width_50 align_right">
+							<a href="punchy.html" class="navigation">
+								<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+								</a>
+								<div class="content_text_no_margin">Punch Needling</div>
+						</div>
 					</div>
-					<div class="sideBySideItem_isLast width_50 align_right">
-						<a href="pilot.html" class="navigation">
-							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
-						</a>
-						<div class="content_text_no_margin">Pilot</div>
-					</div>
-				</div>
 
 
 
