--- a/uiux.html
+++ b/uiux.html
@@ -56,44 +56,83 @@
 			<a href="projects/appian.html" class="card">
 				<img class="card_image" src="assets/appian-2.png"/>
 				<div class="card_title">Appian</div>
-				<div class="card_description">As a UX Designer at Appian, I work on features for the platform's DevOps capabilities, advocate for UX best practices on Customer Success projects, and lead a product illustration team</div>
-				<div class="card_tag">UX</div>
+				<div class="card_description">Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+				</div>
+			</a>
+			<a href="projects/superbill.html" class="card">
+				<img class="card_image" src="assets/superbill2.png"/>
+				<div class="card_title">SuperBill</div>
+				<div class="card_description">Helping patients turn their bills into health insurance reimbursement claims so they can save time, money, and LOTS of headache</div>
+				<div class="card_tag_container">
+						<div class="card_tag htmlcss">HTML/CSS</div>
+						<div class="card_tag web">Webflow</div>
+						<div class="card_tag ux">UX/UI</div>
+					</div>
 			</a>
 			<a href="projects/trailhead2.html" class="card">
 				<img class="card_image" src="assets/trailhead23.png"/>
 				<div class="card_title">Trailhead 2.0</div>
 				<div class="card_description">Second Time's the Charm! A redesign of the beloved original to upgrade user experience and add some "crunchy" personality</div>
-				<div class="card_tag">UX</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+					</div>
+			</a>
+			<a href="projects/haven.html" class="card">
+				<img class="card_image" src="assets/haven2.png"/>
+				<div class="card_title">Haven</div>
+				<div class="card_description">Connecting mental health providers to patients through interactive events and mobile "haven" rooms</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+					</div>
 			</a>
 			<a href="projects/trailhead.html" class="card">
 				<img class="card_image" src="assets/trailhead-cover.jpg"/>
 				<div class="card_title">Trailhead</div>
 				<div class="card_description">A platform for students and staff of the Dartmouth Outing Club to explore, plan, and sign up for trips</div>
-				<div class="card_tag">UX</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+					</div>
 			</a>
 			<a href="projects/phoenix.html" class="card">
 				<img class="card_image" src="assets/pb-cover.jpg"/>
 				<div class="card_title">Phoenix Bikes</div>
 				<div class="card_description">Website re-design for a local DC non-profit during AIGA's 24-hour CreateAthon challenge</div>
-				<div class="card_tag">UX</div>
+				<div class="card_tag_container">
+						<div class="card_tag web">Wordpress</div>
+						<div class="card_tag ux">UX/UI</div>
+					</div>
 			</a>
 			<a href="projects/meexarps.html" class="card">
 				<img class="card_image" src="assets/meexarps.jpg"/>
 				<div class="card_title">Meexarps</div>
 				<div class="card_description">A party game where the goal is to learn about your friends</div>
-				<div class="card_tag">Game</div>
+				<div class="card_tag_container">
+					<div class="card_tag htmlcss">HTML/CSS</div>
+					<div class="card_tag htmlcss">Unity</div>
+					<div class="card_tag ux">UX/UI</div>
+				</div>
 			</a>
 			<a href="projects/shesacoder.html" class="card">
 				<img class="card_image" src="assets/cs52-cover.jpg"/>
 				<div class="card_title">Full-Stack Web Dev</div>
 				<div class="card_description">Projects from CS52: Full-Stack Web Dev where I super-powered my UX skills by gaining a better understanding of React, HTML/CSS and Javascript</div>
-				<div class="card_tag">Dev</div>
+				<div class="card_tag_container">
+					<div class="card_tag htmlcss">HTML/CSS</div>
+					<div class="card_tag htmlcss">Javascript</div>
+					<div class="card_tag htmlcss">React</div>
+				</div>
 			</a>
 			<a href="projects/metamuch.html" class="card">
 				<img class="card_image" src="assets/site-cover.png"/>
 				<div class="card_title">Personal Site</div>
 				<div class="card_description">A self-critique and lessons learned behind designing and coding this website</div>
-				<div class="card_tag">UX</div>
+				<div class="card_tag_container">
+					<div class="card_tag htmlcss">HTML/CSS</div>
+					<div class="card_tag htmlcss">Javascript</div>
+					<div class="card_tag ux">UX/UI</div>
+				</div>
 			</a>						
 		</div>
 	</div>
