--- a/illustration.html
+++ b/illustration.html
@@ -99,6 +99,7 @@
 				<div class="card_tag_container">
 					<div class="card_tag branding">Branding</div>
 					<div class="card_tag illustrator">Illustrator</div>
+					<div class="card_tag college">College</div>
 				</div>
 			</a>
 			<a href="projects/outing-guide.html" class="card">
@@ -116,6 +117,7 @@
 				<div class="card_tag_container">
 						<div class="card_tag branding">Branding</div>
 						<div class="card_tag indesign">InDesign</div>
+						<div class="card_tag college">College</div>
 					</div>
 			</a>
 			<a href="projects/adventure-book.html" class="card">
@@ -125,6 +127,7 @@
 				<div class="card_tag_container">
 						<div class="card_tag illustrator">Illustrator</div>
 						<div class="card_tag photoshop">Photoshop</div>
+						<div class="card_tag college">College</div>
 					</div>
 			</a>
 			<a href="projects/cookies.html" class="card">
@@ -142,6 +145,7 @@
 				<div class="card_description"> Winning Poster for Dartmouth's 2018 Winter Carnival "Snow Wars: May the Frost be with You"</div>
 				<div class="card_tag_container">
 						<div class="card_tag illustrator">Illustrator</div>
+						<div class="card_tag college">College</div>
 					</div>
 			</a>
 			<a href="projects/tsd.html" class="card">
@@ -151,6 +155,7 @@
 				<div class="card_tag_container">
 					<div class="card_tag illustrator">Illustrator</div>
 					<div class="card_tag branding">Branding</div>
+					<div class="card_tag college">College</div>
 				</div>
 			</a>
 		</div>
