--- a/misc.html
+++ b/misc.html
@@ -46,6 +46,7 @@
 						<div class="card_description">What do you get when you mix a month-long vacation opportunity with a budding cyclist going through a quarter-life crisis? A solo bikepacking trip down the East Coast!</div>
 						<div class="card_tag_container">
 								<div class="card_tag biking">Biking</div>
+								<div class="card_tag film">Film</div>
 							</div>
 					</a>
 					<a href="projects/southafrica.html" class="card">
@@ -54,6 +55,7 @@
 						<div class="card_description">What started out as a college-sponsored climbing trip ended up being a lesson in recognizing our own privilege and biases as Americans travelling through another beautiful yet complex, divided country</div>
 						<div class="card_tag_container">
 							<div class="card_tag climbing">Climbing</div>
+							<div class="card_tag film">Film</div>
 						</div>
 					</a>
 		</div>
