--- a/physical.html
+++ b/physical.html
@@ -101,7 +101,7 @@
 				<div class="card_title">Pilot</div>
 				<div class="card_description">The project that started it all. And by "it", I mean a newfound yarn obsession</div>
 				<div class="card_tag_container">
-					<div class="card_tag punchneedle">Punch Needle</div>
+						<div class="card_tag weaving">Weaving</div>
 				</div>
 			</a>
 			<a href="projects/colorfactory.html" class="card">
@@ -117,7 +117,7 @@
 				<div class="card_title">Flow</div>
 				<div class="card_description">Weaving inspired by the flow of  water and sand mixing on the beach</div>
 				<div class="card_tag_container">
-					<div class="card_tag punchneedle">Punch Needle</div>
+						<div class="card_tag weaving">Weaving</div>
 				</div>
 			</a>
 			<a href="projects/geode.html" class="card">
@@ -125,7 +125,7 @@
 				<div class="card_title">Geode</div>
 				<div class="card_description">A weaving exploration in texture</div>
 				<div class="card_tag_container">
-					<div class="card_tag punchneedle">Punch Needle</div>
+						<div class="card_tag weaving">Weaving</div>
 				</div>
 			</a>
 			<a href="projects/wedge.html" class="card">
@@ -141,7 +141,7 @@
 				<div class="card_title">Rose Garden</div>
 				<div class="card_description">"Wake up and smell the roses", they say. As someone with the opposite of a green thumb, a headboard representing a rose garden is the closest I'll get</div>
 				<div class="card_tag_container">
-					<div class="card_tag punchneedle">Punch Needle</div>
+						<div class="card_tag weaving">Weaving</div>
 					<div class="card_tag wood">Wood</div>
 				</div>
 			</a>
@@ -150,7 +150,7 @@
 				<div class="card_title">Clouds</div>
 				<div class="card_description">A whimsical weaving inspired by cotton-candy skies in San Diego</div>
 				<div class="card_tag_container">
-					<div class="card_tag punchneedle">Punch Needle</div>
+					<div class="card_tag weaving">Weaving</div>
 				</div>
 			</a>
 			<a href="projects/candydots.html" class="card">
